
Improved ZX Desktop
- When switching to full screen and disable ZX Desktop, windows are restored after disabling full screen
- Allow to disable border and footer when switching to full screen
- Set machine icon now is dynamic and shows machine icon indicated by parameter + an arrow

Improved Process Management: allow to copy any windows contents to internal clipboard

Improved ZRCP: Allow multiple simultaneous clients

Improved ZENG:
- Allow to connect more than two hosts
- Allow to disable sending input events (keyboard, joystick)
- Sync flash state between instances

Improved ZX Spectrum Next emulation:
- Updated machine id list

Fixed several memory leaks:
- Drawing Text Aventure Map
- Loading .Z80 snapshots
- Using the Speccy online browser
- Running the Hilow Audio Convert
- Enabling ZRCP
- Downloading ZEsarUX extras
- Downloading ZX Spectrum Next MMC image
- Syncing file image from File Utilities
- Copying a folder from File Utilities
- Showing First Aid Windows

Fixed Initialization of Visual memory tables
Fixed ZX Vision relocation windows
Fixed error when no permissions writing to mmc, ide, trd, dsk, hilow: disable persistent writes when it happens
Fixed permissions when installing ZEsarUX on Linux: zxuno.flash and tbblue.mmc are now writable by anyone
Fixed Text Adventure Graphics rendering invalid characters
Fixed getting GAC objects
Fixed esxdos handler when using fopen flags: FA_READ + FA_WRITE + FA_OPEN_CREAT
Fixed ZRCP bug when closing connection (socket descriptor was kept open)
Fixed reading ESC key on curses driver

* As always, there are some other minor bugfixes and improvements

----------------------------------------


Version 10.3 - La Abadia del Crimen edition. 10 May 2023

There are lots of changes in this version, but some of them are remarkable:
- Added machines Amstrad PCW 8256, PCW 8512, CPC 6128, CPC 664